--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
   }
 
   h1 {
@@ -31,6 +32,17 @@
 <body>
   <h1>La iniciativa se castiga.</h1>
   <footer>lainiciativasecastiga.com</footer>
+  <script type="text/javascript" id="cookieinfo"
+	src="//cookieinfoscript.com/js/cookieinfo.min.js"
+	data-bg="#f3f3f3"
+	data-fg="#888888"
+	data-link="#2596be"
+  data-divlink="#000000"
+  data-divlinkbg="#cccccc"
+	data-cookie="CookieInfoScript"
+	data-text-align="left"
+       data-close-text="Got it!">
+  </script>
   <script type="text/javascript" id="cookieinfo" src="//cookieinfoscript.com/js/cookieinfo.min.js"></script>
 </body>
 </html>
