Cookie alert and google analytics
Signed-off-by: Oleg Zaytsev <mail@olegzaytsev.com>

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <html>
 <head>
   <title>La iniciativa se castiga.</title>
-  <style type="text/css">
+  <style>
   body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     height: 100%;
+    margin: 0;
+  }
+  #container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
   }
 
   h1 {
@@ -19,30 +27,36 @@
     font-size: 10pt;
   }
 
+  .termsfeed-com---nb-headline {
+    width: 100%;
+    order: 1000;
+  }
   </style>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48532141-2"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-48532141-2');
-  </script>
 </head>
 <body>
-  <h1>La iniciativa se castiga.</h1>
-  <footer>lainiciativasecastiga.com</footer>
-  <script type="text/javascript" id="cookieinfo"
-	src="//cookieinfoscript.com/js/cookieinfo.min.js"
-	data-bg="#f3f3f3"
-	data-fg="#888888"
-	data-link="#2596be"
-  data-divlink="#000000"
-  data-divlinkbg="#cccccc"
-	data-cookie="CookieInfoScript"
-	data-text-align="left"
-       data-close-text="Got it!">
-  </script>
-  <script type="text/javascript" id="cookieinfo" src="//cookieinfoscript.com/js/cookieinfo.min.js"></script>
+
+<!-- Cookie Consent by TermsFeed https://www.TermsFeed.com -->
+<script type="text/javascript" src="https://www.termsfeed.com/public/cookie-consent/4.1.0/cookie-consent.js" charset="UTF-8"></script>
+<script type="text/javascript" charset="UTF-8">
+    document.addEventListener('DOMContentLoaded', function () {
+        cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","palette":"dark","language":"es","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"page_refresh_confirmation_buttons":false,"website_name":"lainiciativasecastiga"});
+    });
+</script>
+
+<!-- Google Analytics -->
+<!-- Google tag (gtag.js) -->
+<script type="text/plain" data-cookie-consent="tracking" async src="https://www.googletagmanager.com/gtag/js?id=G-461X89L5KX"></script>
+<script type="text/plain" data-cookie-consent="tracking">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-461X89L5KX');
+</script>
+<!-- end of Google Analytics-->
+<div id="container">
+<h1>La iniciativa se castiga.</h1>
+</div>
+
 </body>
 </html>
