Switch tracking to vaivo.net
Signed-off-by: Oleg Zaytsev <mail@olegzaytsev.com>

--- a/index.html
+++ b/index.html
@@ -32,28 +32,10 @@
     order: 1000;
   }
   </style>
+  <script defer data-domain="lainiciativasecastiga.com" src="https://plausible.vaivo.net/js/script.js"></script>
 </head>
 <body>
 
-<!-- Cookie Consent by TermsFeed https://www.TermsFeed.com -->
-<script type="text/javascript" src="https://www.termsfeed.com/public/cookie-consent/4.1.0/cookie-consent.js" charset="UTF-8"></script>
-<script type="text/javascript" charset="UTF-8">
-    document.addEventListener('DOMContentLoaded', function () {
-        cookieconsent.run({"notice_banner_type":"headline","consent_type":"express","palette":"dark","language":"es","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"page_refresh_confirmation_buttons":false,"website_name":"lainiciativasecastiga"});
-    });
-</script>
-
-<!-- Google Analytics -->
-<!-- Google tag (gtag.js) -->
-<script type="text/plain" data-cookie-consent="tracking" async src="https://www.googletagmanager.com/gtag/js?id=G-461X89L5KX"></script>
-<script type="text/plain" data-cookie-consent="tracking">
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-461X89L5KX');
-</script>
-<!-- end of Google Analytics-->
 <div id="container">
 <h1>La iniciativa se castiga.</h1>
 </div>
