Update stats domain
Signed-off-by: Oleg Zaytsev <mail@olegzaytsev.com>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     order: 1000;
   }
   </style>
-  <script defer data-domain="lainiciativasecastiga.com" src="https://plausible.vaivo.net/js/script.js"></script>
+  <script defer data-domain="lainiciativasecastiga.com" src="https://stats.colega.dev/js/script.js"></script>
 </head>
 <body>
 
